fix sortable bug on mobile v0.1

--- a/public/client/css/style.css
+++ b/public/client/css/style.css
@@ -49,6 +49,9 @@
     border: none;
     padding: 0;
 }
+.btn-cancel {
+    background-color: #c3c3c3;
+}
 .btn-cancel:hover {
     color: white;
     background-color: #a5a5a5;
